2005-12-13 Kimmo
 PATCH: [ 1378174 ] Share Src/res between translations
  Src/Languages: *.rc
  Src/Languages/res: removed .bmp .cur and .ico files and WinMergeSplash.psd
   splash1.bmp and splash WinMergeSplash.psd not removed from Catalan

2005-12-13 Perry
 PATCH: [ 1377545 ] Remove needless casts

2005-12-11 Perry
 PATCH: [ 1372549 ] readme for Merge7z distributables
  Merge7z: readme.txt

2005-12-11 Kimmo
 PATCH: [ 1371994 ] Enable hi-color icons for folder compare
  Icons from Tim (Thanks!)
  Src: CompareStatisticsDlg.cpp DirView.cpp Merge.rc resource.h
  res new files: folder.ico folderskip.ico lfolder.ico rfolder.ico
  res deleted files: folder.bmp folderskip.bmp lfolder.bmp rfolder.bmp
  Src/Languages: *.rc resource.h
  Src/Languages/res: new and deleted files like in res above

2005-12-10 Perry
 PATCH: [ 1371384 ] Move Expat maps into WinMerge src
  Plugins\src_VCPP\DisplayXMLFiles: DisplayXMLFiles.dsp
  Src\ExpatMapLib added
  Many files moved from DisplayXMLFiles to new ExpatMapLib
 PATCH: [ 1373020 ] Carry unicoding, codepage, & file path together
 & PATCH: [ 1377545 ] Remove needless casts
  Src: DiffWrapper.cpp DiffWrapper.h DirScan.cpp DirView.cpp
   MainFrm.cpp MainFrm.h Merge.dsp MergeDoc.cpp MergeDoc.h
  Src\Common: RegKey.cpp
  NEW Src\FileLocation.h


2005-12-09 Perry
 PATCH: [ 1188787 ] New Chinese translation rc file (from PATCH 1183476)
  Remainder of dialogs
  Src/Languages/ChineseTraditional: MergeChineseTraditional.rc
 BUG: [ 1376825 ] infinite loop bug in byte diffs
  Src: stringdiffs.cpp
 PATCH: [ 1188787 ] New Chinese translation rc file (from PATCH 1183476)
  A few string resources
  Src/Languages/ChineseTraditional: MergeChineseTraditional.rc
 PATCH: [ 1249007 ] Short size column
  Src: DirViewColItems.cpp locality.cpp locality.h Merge.rc resource.h
 PATCH: [ 1377362 ] Fix coretools to MakeResDll compiles
 BUG: [ 1377361 ] MakeResDll broken b/c coretools broken
  Src/Common: coretools.cpp
   
2005-12-08 Perry